apply plugin: 'java'
apply plugin: 'maven-publish'

sourceCompatibility = 9

dependencies {
    compileOnly group: 'org.jetbrains', name: 'annotations'
    compileOnly group: 'org.springframework', name: 'spring-jdbc'
    compileOnly group: 'org.postgresql', name: 'postgresql'
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
}